<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/info1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/info2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:shrinkColumns="1"
            android:stretchColumns="1" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/latitude"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/longitude"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/limit"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="500" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/user"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>

                <EditText
                    android:id="@+id/editUser"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/saveas"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>

                <EditText
                    android:id="@+id/editSaveAs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="" >
                </EditText>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>

                <FrameLayout
                    android:id="@+id/frameLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btnStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/start" >
                    </Button>
                </FrameLayout>
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/star"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="20dp"
                android:layout_height="fill_parent" />

            <RadioGroup
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/radioSkipped"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skipped" />

                <RadioButton
                    android:id="@+id/radioMarked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marked" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/history"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>
    </LinearLayout>

</ScrollView>